--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "aos": "^3.0.0-beta.6",
     "core-js": "^3.6.4",
     "vue": "^2.6.11",
+    "vue-carousel": "^0.18.0",
     "vue-router": "^3.1.5",
     "vuetify": "^2.2.11",
     "vuex": "^3.1.2"
