--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   "dependencies": {
     "aos": "^3.0.0-beta.6",
     "core-js": "^3.6.4",
+    "save": "^2.4.0",
     "vue": "^2.6.11",
     "vue-carousel": "^0.18.0",
+    "vue-paginate": "^3.6.0",
     "vue-router": "^3.1.5",
     "vuetify": "^2.2.11",
     "vuex": "^3.1.2"
