--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "save": "^2.4.0",
     "vue": "^2.6.11",
     "vue-carousel": "^0.18.0",
+    "vue-facebook-page": "^1.0.1",
     "vue-paginate": "^3.6.0",
     "vue-router": "^3.1.5",
     "vuetify": "^2.2.11",
